2004-11-30  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-utils.c:
	- Allow gnome-help: URI scheme (Don Scorgie)
	- Make external links actually work (Don Scorgie)

	* src/yelp-window.c:
	- Fix 'Open Link in New Window' (Don Scorgie)

	* stylesheets/toc2html.xsl:
	- More TOC work

2004-11-29  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	- Leak less memory

	* src/yelp-toc-pager.c:
	* src/yelp-utils.c:
	* src/yelp-utils.h:
	* stylesheets/toc2html.xsl:
	- More TOC improvements

2004-11-28  Shaun McCance  <shaunm@gnome.org>

	* configure.in:
	* data/Makefile.am
	* data/scrollkeeper.xml:
	* data/toc.xml.in:
	* src/Makefile.am:
	* src/yelp-toc-pager.c:
	* src/yelp-utils.c:
	* src/yelp-utils.h:
	* src/yelp-window.c:
	* stylesheets/Makefile.am:
	* stylesheets/toc2html.xsl:
	- Added --enable-man and --enable-info
	- Revamped TOC code

2004-11-27  Dwayne Bailey  <dwayne@translate.org.za>

	* configure.in: Added "nso" to ALL_LINGUAS.

2004-11-21  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-window.c:
	- Patch from Quinn Kronifontes to add logo to about dialog

2004-11-21  Christoffer Olsen  <co@deworks.net>

	* po/POTFILES.in: Replaced yelp.desktop.in with yelp.desktop.in.in
	* yelp.desktop.in: Moved to yelp.desktop.in.in
	* yelp.desktop.in.in: Added X-GNOME-Bugzilla-Version
	* configure.in: Added yelp.desktop.in.in to AC_OUTPUT

2004-11-21  Shaun McCance  <shaunm@gnome.org>

	* stylesheets/man2html.xsl:
	- Various man xslt additions

2004-11-17  Marco Pesenti Gritti  <marco@gnome.org>

	* data/Makefile.am:

	Fix build out of src directory. Bug #158328	

2004-11-16  James Bowes  <bowes@cs.dal.ca>

	reviewed by: Shaun McCance  <shaunm@gnome.org>

	* data/ui/yelp-ui.xml:
	* src/Makefile.am:
	* src/yelp-gecko-utils.cpp:
	* src/yelp-gecko-utils.h:
	* src/yelp-html-gecko.c: (yelp_html_select_all):
	* src/yelp-html.h:
	* src/yelp-window.c: (window_copy_cb), (window_select_all_cb): 
	Add 'select all' to the edit menu, along with supporting 